--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,8 +1,10 @@
 @font-face {
 	font-family: 'Cassannet';
-	src: url('../font/Cassannet.eot');
-	src: local('☺'), url('../font/Cassannet.woff') format('woff'), url('../font/Cassannet.ttf') format('truetype'), url('../font/Cassannet.svg') format('svg');
+	src: 
+		url('../font/Cassannet.ttf') format('truetype'), 
+		url('../font/Cassannet.svg') format('svg');
 	font-weight: normal;
+
 	font-style: normal;
 }
 
