--- a/css/darescueteam.css
+++ b/css/darescueteam.css
@@ -10,16 +10,32 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 #bg {
-  width:100%;
-  height:50%;
+  width: 40%;
+  max-width: 400px;
+  margin-top: 3%;
   z-index: 1;
 }
+
+
+@media (max-width: 767px){
+  #bg{
+   margin-top: 10%;
+  }
+}
+
 
 .motto{
   font-family: 'Lato', sans-serif;
   font-weight: 300;
   font-size: 2em;
 }
+
+@media (max-width: 767px){
+  .motto{
+   font-size:1.5em;
+  }
+}
+
 
 .motto span{
   font-variant: italic;
@@ -41,7 +57,11 @@ body {
   font-size: 5em; 
 }
 
-
+@media (max-width: 767px){
+  #one h1{
+   font-size:3em;
+  }
+}
 
 #twitter-widget-0, .twitter-timeline{
   display: none;
@@ -49,7 +69,7 @@ body {
 
 #tweets{
   text-align: left;
-  background-color: #ccc;
+  background-color: #c6c6c6;
   min-height: 100vh;
 
 }
@@ -67,6 +87,13 @@ body {
   margin-bottom: 100px;
 }
 
+
+@media (max-width: 767px){
+  .loading{
+    font-size: 2em;
+  }
+}
+
 #tweets h2{
   font-family: 'Lato', sans-serif;
   font-weight: 200;
@@ -74,9 +101,23 @@ body {
   color:#CC0000;
 }
 
+
+@media (max-width: 767px){
+  #tweets h2{
+   font-size:2em;
+  }
+}
+
 #tweets .title{
   padding: 1em;
   margin: 1em;
+}
+
+@media (max-width: 767px){
+  #tweets .title{
+    padding: 0.5em;
+    margin: 0.5em;
+  }
 }
 
 #tweets .l-box{
@@ -87,6 +128,13 @@ body {
   color:#222;
   font-size: 1.2em;
 }
+
+@media (max-width: 767px){
+  #tweets .l-box{
+    margin: 0 1em 0 1em;
+  }
+}
+
 
 #tweets .l-box:hover{
   background-color: #CC0000;
@@ -124,7 +172,19 @@ body {
 
 #tweets .link a{
   color: #fff;
+  font-size: small;
   text-decoration: none;
+}
+
+#tweets .link a:hover{
+  text-decoration: underline;
+}
+
+@media (max-width: 767px){
+  #tweets .link a{
+    font-size: small;
+    text-decoration: underline;
+  }
 }
 
 
@@ -141,6 +201,14 @@ body {
   border-bottom:6px solid rgba(204,0,0,.15);
   border-top:6px solid rgba(204,0,0,.8);
   border-radius:100%;
+}
+
+
+@media (max-width: 767px){
+  .spinner{
+    height:10px;
+    width:10px;
+  }
 }
 
 @-webkit-keyframes rotation {
