--- a/css/darescueteam.css
+++ b/css/darescueteam.css
@@ -85,6 +85,7 @@ body {
   /*background-color: #c6c6c6;*/
   /*min-height: 100vh;*/
 min-height: 780px;
+background-color: #090909;
 }
 
 .margin-20{
@@ -98,6 +99,7 @@ min-height: 780px;
   font-family: Lato;
   display: inline-block;
   margin-bottom: 100px;
+  color: #D4D4D4;
 }
 
 
@@ -138,9 +140,11 @@ min-height: 780px;
   margin: 1em;
   font-family: 'Lato', sans-serif;
   font-weight: 400;
-  color:#222;
+  color: #D4D4D4;
   font-size: 1.2em;
-}
+  border-radius: 5px;
+
+  }
 
 @media (max-width: 767px){
   #tweets .l-box{
@@ -154,9 +158,9 @@ min-height: 780px;
   color:white;
   font-weight: bold;
 
-  -moz-box-shadow: 0 0 10px 0px #000;
-  -webkit-box-shadow: 0 0 10px 0px #000;
-  box-shadow: 0 0 10px 0px #000;
+  -moz-box-shadow: 0 0 10px 0px #444;
+  -webkit-box-shadow: 0 0 10px 0px #444;
+  box-shadow: 0 0 10px 0px #444;
 }
 #tweets .l-box:hover .when, #tweets .l-box:hover .link{
   visibility: visible;
@@ -262,7 +266,7 @@ min-height: 780px;
   font-size: 1.5em;
 }
 
-.member:hover{
+.member{
   background-color: #CC0000;
   color:white;
     -moz-box-shadow: 0 0 10px 0px #000;
